@startuml flowsolve
!pragma useIntermediatePackages false

class flowsolve.entity.Edge.Edge {
  start_node: Node
  end_node: Node
  conditions: List[Condition]
  parameters: Dict[str, str]
}
class flowsolve.entity.Flowchart.Flowchart {
  nodes: None
  edges: None
  timeout: None
}
class flowsolve.entity.nodes.GetRobotsTxtNode.GetRobotsTxtNode {
}
class flowsolve.entity.nodes.IpPortInputNode.IpPortInputNode {
}
abstract class flowsolve.entity.nodes.Node.Node {
  inputs: Dict[str, NodeInput]
  outputs: None
  subscribers: List[FlowchartComponent]
}
flowsolve.entity.Edge.Edge *-- flowsolve.entity.nodes.Node.Node
flowsolve.entity.Edge.Edge *-- flowsolve.entity.Condition.Condition
flowsolve.entity.FlowchartComponent.FlowchartComponent <|-- flowsolve.entity.Edge.Edge
flowsolve.entity.FlowchartComponent.FlowchartComponent <|-- flowsolve.entity.Flowchart.Flowchart
flowsolve.entity.nodes.Node.Node <|-- flowsolve.entity.nodes.GetRobotsTxtNode.GetRobotsTxtNode
flowsolve.entity.nodes.Node.Node <|-- flowsolve.entity.nodes.IpPortInputNode.IpPortInputNode
flowsolve.entity.nodes.Node.Node *-- flowsolve.entity.NodeInput.NodeInput
flowsolve.entity.nodes.Node.Node *-- flowsolve.entity.FlowchartComponent.FlowchartComponent
flowsolve.entity.FlowchartComponent.FlowchartComponent <|-- flowsolve.entity.nodes.Node.Node
footer Generated by //py2puml//
@enduml

